--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,7 +1,7 @@
 name: "Xuyuan Liu"
 title: "Incoming Ph.D. in Computer Science, Dartmouth College"
 email: "xuyuan.liu.gr[AT]dartmouth.edu "
-profile_pic: "/assets/profile-pics/SU_small.jpg"
+profile_pic: "/assets/profile-pics/cat.jpeg"
 #twitter: "https://twitter.com/msaveski"
 #linkedin: "https://www.linkedin.com/in/msaveski"
 #github: "https://github.com/msaveski"
