--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,9 +1,9 @@
 name: "Xuyuan Liu"
 title: "Incoming Ph.D. in Computer Science, Dartmouth College"
-email: "xuyuan.liu.gr[AT]dartmouth.edu "
+email: "xuyuan.liu.gr[AT]dartmouth.edu <br/> hsuyuanliu0204@mail.nankai.edu.cn "
 profile_pic: "/assets/profile-pics/cat.jpeg"
 #twitter: "https://twitter.com/msaveski"
 #linkedin: "https://www.linkedin.com/in/msaveski"
 #github: "https://github.com/msaveski"
-#google_scholar: "https://scholar.google.com/citations?user=M3D870YAAAAJ&hl=en"
+google_scholar: "https://scholar.google.com/citations?user=r9PgD0IAAAAJ&hl=en"
 google_analystics_tracking_id: 'G-53YWZ6YGR6'
