--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,6 +1,6 @@
 papers:
 
-  - title: "TreeMAN: Tree-enhanced Multimodal Attention Network for {ICD} Coding "
+  - title: "TreeMAN: Tree-enhanced Multimodal Attention Network for ICD Coding "
     authors: "Zichen Liu, <b>Xuyuan Liu</b>, Yanlong Wen, Guoqing Zhao, Fen Xia, Xiaojie Yuan"
     venue: "COLING'22:  International Conference on Computational Linguistics."
     paper_pdf: "/assets/publications/2022_coling_treeman/paper.pdf"
