--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -4,6 +4,6 @@ email: "xuyuan.liu.gr[AT]dartmouth.edu <br/> hsuyuanliu0204[AT]mail.nankai.edu.c
 profile_pic: "/assets/profile-pics/cat.jpeg"
 #twitter: "https://twitter.com/msaveski"
 #linkedin: "https://www.linkedin.com/in/msaveski"
-#github: "https://github.com/msaveski"
+github: "https://github.com/HsuyuanLiu"
 google_scholar: "https://scholar.google.com/citations?user=r9PgD0IAAAAJ&hl=en"
 google_analystics_tracking_id: 'G-53YWZ6YGR6'
