--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -5,5 +5,5 @@ profile_pic: "/assets/profile-pics/cat.jpeg"
 #twitter: "https://twitter.com/msaveski"
 #linkedin: "https://www.linkedin.com/in/msaveski"
 github: "https://github.com/HsuyuanLiu"
-google_scholar: "https://scholar.google.com/citations?user=r9PgD0IAAAAJ&hl=en"
+#google_scholar: "https://scholar.google.com/citations?user=r9PgD0IAAAAJ&hl=en"
 google_analystics_tracking_id: 'G-53YWZ6YGR6'
