--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -3,7 +3,7 @@ title: "Incoming Ph.D. in Computer Science, Dartmouth College"
 email: "xuyuan.liu.gr[AT]dartmouth.edu <br/> hsuyuanliu0204[AT]mail.nankai.edu.cn "
 profile_pic: "/assets/profile-pics/cat.jpeg"
 #twitter: "https://twitter.com/msaveski"
-#linkedin: "https://www.linkedin.com/in/msaveski"
+linkedin: "https://www.linkedin.com/in/xuyuan-liu-639012279/"
 github: "https://github.com/HsuyuanLiu"
 #google_scholar: "https://scholar.google.com/citations?user=r9PgD0IAAAAJ&hl=en"
 google_analystics_tracking_id: 'G-53YWZ6YGR6'
