--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,6 +1,6 @@
 name: "Xuyuan Liu"
 title: "Incoming Ph.D. in Computer Science, Dartmouth College"
-email: "xuyuan.liu.gr[AT]dartmouth.edu <br/> hsuyuanliu0204[AT]mail.nankai.edu.cn "
+email: "xuyuan.liu.gr[AT]dartmouth.edu "
 profile_pic: "/assets/profile-pics/cat.jpeg"
 #twitter: "https://twitter.com/msaveski"
 linkedin: "https://www.linkedin.com/in/xuyuan-liu-639012279/"
