--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,5 +1,5 @@
 name: "Xuyuan Liu"
-title: "Incoming Ph.D. in Computer Science, Dartmouth College"
+title: "Ph.D. Student in Computer Science, Dartmouth College"
 email: "xuyuan.liu.gr[AT]dartmouth.edu "
 profile_pic: "/assets/profile-pics/cat.jpeg"
 #twitter: "https://twitter.com/msaveski"
