--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -3,11 +3,11 @@ experiences:
 - place: "Dartmouth College"
   time: "Sep 2023 - 2028"
   title: "Ph.D. Student"
-  subtitle: "Computing Science"
+  subtitle: "Computer Science"
   category: "school"
 
 - place: "Nankai University"
   time: "Sep 2019 -Jul 2023"
   title: "B.Eng. Student"
-  subtitle: "Computing Science and Technology"
+  subtitle: "Computer Science and Technology"
   category: "school"
