--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,8 +1,8 @@
 name: "Xuyuan Liu"
 title: "Ph.D. Student in Computer Science, Dartmouth College"
 email: "xuyuan.liu.gr[AT]dartmouth.edu "
-profile_pic: "/assets/profile-pics/cat.jpeg"
-#twitter: "https://twitter.com/msaveski"
+profile_pic: "/assets/profile-pics/pic_2023.jpeg"
+twitter: "https://x.com/hsuyuan0204"
 linkedin: "https://www.linkedin.com/in/xuyuan-liu-639012279/"
 github: "https://github.com/HsuyuanLiu"
 #google_scholar: "https://scholar.google.com/citations?user=r9PgD0IAAAAJ&hl=en"
